# MachineMusic

./: CMakeLists.txt  README.md
MIDI_Translate/: Event.cpp  Event.h  MetaEvent.cpp  MetaEvent.h  MidiEvent.cpp  MidiEvent.h  Tone.cpp  Tone.h  Track.cpp  Track.h  main.cpp
Tones/: Note.cpp  Note.h  Tones.ino
espTones/: Note.h
